--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 In computer science, /add an x-fast trie /add is a data structure for storing integers from a bounded domain. It supports exact and predecessor or successor queries in time O(log log M), using O(n log M) space, where n is the number of stored values and M is the maximum value in the domain. The structure was proposed by Dan Willard in 1982,[1] along with the more complicated y-fast trie, as a way to improve the space usage of van Emde Boas trees, while retaining the O(log log M) query time. </textarea
     >
 
-    <script src="src/index.js"></script>
+    <script src="src/index.ts"></script>
   </body>
 </html>
